test: planes3D extractor