@@ -1,8 +1,7 @@
 package app.bpartners.geojobs.service.lidar.model.geometry.planes;
 
-import static java.util.stream.Collectors.toList;
-
 import app.bpartners.geojobs.service.lidar.model.geometry.LasPointGeometry;
+import java.security.SecureRandom;
 import java.util.*;
 import java.util.function.Function;
 import lombok.RequiredArgsConstructor;
@@ -12,7 +11,6 @@ public class OnePlane3DExtractor
     implements Function<List<LasPointGeometry>, OnePlane3DExtractor.Result> {
   private final int iterations;
   private final double threshold;
-  private static final Random RANDOM = new Random();
 
   @Override
   public Result apply(List<LasPointGeometry> points) {
@@ -23,11 +21,12 @@ public class OnePlane3DExtractor
     List<LasPointGeometry> bestInliers = new ArrayList<>();
     Plane3D bestModel = null;
 
+    var random = new SecureRandom();
     for (int i = 0; i < iterations; i++) {
       // --- 1. Sample 3 distinct random points
-      var p1 = points.get(RANDOM.nextInt(points.size()));
-      var p2 = points.get(RANDOM.nextInt(points.size()));
-      var p3 = points.get(RANDOM.nextInt(points.size()));
+      var p1 = points.get(random.nextInt(points.size()));
+      var p2 = points.get(random.nextInt(points.size()));
+      var p3 = points.get(random.nextInt(points.size()));
 
       // Ensure distinct points
       if (p1.equals(p2) || p2.equals(p3) || p1.equals(p3)) {
@@ -38,7 +37,7 @@ public class OnePlane3DExtractor
       var plane = Plane3D.fit(p1, p2, p3);
 
       // --- 3. Compute distances
-      var inliers = points.stream().filter(p -> plane.distance(p) < threshold).collect(toList());
+      var inliers = points.stream().filter(p -> plane.distance(p) < threshold).toList();
 
       // --- 4. Keep best
       if (inliers.size() > bestInliers.size()) {
@@ -53,7 +52,7 @@ public class OnePlane3DExtractor
 
     // --- 5. Compute outliers
     var inlierSet = new HashSet<>(bestInliers);
-    var outliers = points.stream().filter(p -> !inlierSet.contains(p)).collect(toList());
+    var outliers = points.stream().filter(p -> !inlierSet.contains(p)).toList();
     return new Result(bestModel.with(inlierSet), outliers);
   }
 
